[Svelte] Svelte 4 support (CI TEST ??)

--- a/package.json
+++ b/package.json
@@ -90,8 +90,8 @@
     "strip-ansi": "^6.0.0",
     "stylus": "^0.58.1",
     "stylus-loader": "^7.0.0",
-    "svelte": "^3.50.0",
-    "svelte-loader": "^3.1.0",
+    "svelte": "^3.0 || ^4.0",
+    "svelte-loader": "^3.1.9",
     "ts-loader": "^9.0.0",
     "typescript": "^4.2.2 || ^5.0.0",
     "vue": "^3.2.14",
